<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_users"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif"
        android:background="@drawable/textview_border"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        app:cardCornerRadius="20dp"
        android:backgroundTint="@color/deep_purple_200">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/padding_medium">

            <EditText
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColorHint="@color/black"
                android:gravity="center"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:background="@drawable/card_textview_boarder"
                android:layout_margin="@dimen/margin_medium"

                android:autofillHints="emailAddress"
                android:inputType="text"/>

            <EditText
                android:id="@+id/txt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:textColorHint="@color/black"
                android:gravity="center"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:background="@drawable/card_textview_boarder"
                android:layout_margin="@dimen/margin_medium"

                android:autofillHints="username"
                android:inputType="text"/>

            <EditText
                android:id="@+id/txt_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/age"
                android:textColorHint="@color/black"
                android:gravity="center"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:background="@drawable/card_textview_boarder"
                android:layout_margin="@dimen/margin_medium"

                android:inputType="number"/>

            <EditText
                android:id="@+id/txt_note"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:hint="@string/note"
                android:textColorHint="@color/black"
                android:gravity="center"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:background="@drawable/card_textview_boarder"
                android:layout_margin="@dimen/margin_medium"

                android:inputType="text"/>

            <Button
                android:id="@+id/btn_add"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/add"
                android:backgroundTint="@color/deep_purple_800"
                android:textAllCaps="false"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/margin_medium"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>