<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:weightSum="3">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:scaleType="fitXY"
            android:src="@drawable/bg_details" />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/margin_medium"
            android:layout_weight="0.8"
            app:cardCornerRadius="20dp"
            android:backgroundTint="@color/azure">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="@dimen/padding_medium"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="@dimen/margin_medium">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_email"/>
                    <TextView
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:fontFamily="sans-serif-black"
                        android:textColorHint="@color/black"
                        android:padding="@dimen/margin_small"
                        android:textSize="@dimen/text_large"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/txt_email"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:textColorHint="@color/black"
                        android:layout_weight="1"
                        android:padding="@dimen/margin_small"
                        android:textSize="@dimen/text_large"
                        android:textColor="@color/black"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="@dimen/margin_medium">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_calendar"/>
                    <TextView
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/age"
                        android:fontFamily="sans-serif-black"
                        android:textColorHint="@color/black"
                        android:padding="@dimen/margin_small"
                        android:textSize="@dimen/text_large"
                        android:textColor="@color/black"/>
                    <TextView
                        android:id="@+id/txt_age"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/age"
                        android:textColorHint="@color/black"
                        android:layout_weight="1"
                        android:padding="@dimen/margin_small"
                        android:textSize="@dimen/text_large"
                        android:textColor="@color/black"/>
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="back"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/pro"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_gravity="center_horizontal"
            app:civ_border_color="@color/black"
            app:civ_border_width="@dimen/margin_extra_small"/>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            app:cardCornerRadius="20dp"
            android:backgroundTint="@color/byzantium">

            <TextView
                android:id="@+id/txt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:textColorHint="@color/black"
                android:gravity="center"
                android:textSize="@dimen/text_extra_large"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/white"
                android:padding="@dimen/padding_medium"/>
        </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/txt_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/note"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/text_large"
                android:layout_margin="@dimen/margin_medium"
                android:textColor="@color/white"/>


    </LinearLayout>

</FrameLayout>